Bug 1398448: Always insert async when reconstructing ancestors to avoid pathological frame construction cases. r=bz

MozReview-Commit-ID: 5ARTWW9dt7X